# spectra-hash

./: .gitignore  CMakeLists.txt  README.md  license  pom.xml
R/: DESCRIPTION  splash.R
R/R/: getSplash.R
R/tests/: testthat.R
base-dataset/spectra/: test-set-not-splashed-v1.csv  test-set-not-splashed.csv
collision_tester/: Makefile  splash.cpp  splashIt.cpp  test-data-computed-5digits.tsv  test-data-computed-6digits.tsv  test-data.tsv
core/: pom.xml
cpp/: Makefile  README.md  splash  splash-v1.cpp  splash-v2.cpp  splash.cpp  splashIt.cpp
cpp/src/: splash.cpp  splash.hpp  splashIt.cpp
cpp/tests/: catch.hpp  test_splash.cpp
csharp/: .gitignore  splash.sln
csharp/SplashTests/: UnitTest1.cs
csharp/splash/: ISpectrum.cs  ISplash.cs  Ion.cs  Program.cs  Spectrum.cs  Splash.cs  Splash.csproj  SplashRunner.cs  SplashRunner.csproj  StatisticBuilder.cs
docker/: Dockerfile  build.sh  pom.xml
docker/nginx/: awtstats.conf  client.conf  logrotate  nginx.conf
docker/src/: run.sh
java/: pom.xml
javascript/: README.md  bower.json  karma.conf.js  package.json  splash.js
javascript/test/: splash-spec.js
python/: README.md  setup.py  splash-v1.py  splash.py  splashIt.py
python/splash/: __init__.py  spectrum.py  spectrum_type.py  splash.py
python/tests/: test_spectrum.py  test_splash.py
rest/: pom.xml
scala/: README.md  pom.xml
specgen/: pom.xml
splash-analysis/: Dockerfile  aggregation_consumer.py  build.sh  pom.xml  producer.py
splashR/: DESCRIPTION  LICENSE  NAMESPACE  README.md
utilities/: pom.xml
validation/: pom.xml
web/: pom.xml
(+175 files in other folders)
